# peps_2018_2019

./: README.md  README.txt
Peps4/: Peps4.sln
Peps4/data/: 7267.T.csv  9437.T.csv  AIRP.PA.csv  DBKGn.DE.csv  GASI.MI.csv  LGEN.L.csv  PG.N.csv  SLB.N.csv  bac.n.csv  data.csv
Peps4/pricer_UnitTest/: pricer_UnitTest.vcxproj  pricer_UnitTest.vcxproj.filters  stdafx.cpp  unittest1.cpp
Peps4/pricer_executable/: ExportDll.h  FileReader.cpp  FileReader.h  Pricing.cpp  Pricing.h  TestCorelation.cpp  TestCorelation.h  TestData.cpp  TestData.h  TestDates.cpp  TestDates.h  TestProduit.cpp  TestProduit.h  TestTimeManager.cpp  TestTimeManager.h  pricer_executable.cpp  pricer_executable.vcxproj  pricer_executable.vcxproj.filters
prisma/: Program.cs  Startup.cs
prisma/cpp/: CMakeLists.txt
prisma/cpp/pnl/: appveyor.yml
prisma/cpp/src/: Basket.cpp  Basket.h  BlackSchole.cpp  BlackSchole.h  Call.cpp  Call.h  Corelation.cpp  Corelation.h  Curency.h  Data.cpp  Data.h  Date.cpp  Date.h  Delta.cpp  Delta.h  FileReader.cpp  GetData.h  GetDataHisto.cpp  GetDataSimul.cpp  GetDataSimul.h  Hello.cpp  Hello.h  JourSemaine.h  Model.cpp  Model.h  MonteCarlo.cpp  MonteCarlo.h  Pricing.cpp  Pricing.h  Prisma.cpp  Prisma.h  Produit.h  SousJacent.cpp  TestCorelation.cpp  TestCorelation.h  TestData.cpp  TestData.h  TestDates.cpp  TestDates.h  TestProduit.cpp  (+10 more)
raport/: .~lock.Couverture_Basket_2m_2.ods#  .~lock.Couverture_Call_6M.ods#  .~lock.couverture_prisma.ods#  Couverture_Basket_2m.ods  Couverture_Basket_2m_2.ods  Couverture_Call_6M.ods  couverture_prisma.ods
(+67 files in other folders)
